2009-11-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug: tables and fields were not always properly mapped in INNER JOINs

2009-11-05  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 0.9.24
	* Follow-up of RFC #12452: Reflected change of visibility of method compileFieldCfg() in t3lib_sqlparser

2009-11-04  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated ext_emconf.php's author and extension version dependencies

2009-11-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Added some general unit tests (without any engine-specific test nor mapping)
	* Cleanup #12440: Copy DBAL-only SQL parser methods from t3lib_sqlparser to ux_t3lib_sqlparser
	* Fixed bug #12231: New caching framework (4.3-dev) does not work with DBAL

2009-10-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Added compatibility operators for PostgreSQL as resource script (thanks to Ries van Twisk)
	* Added message in Extension Manager to let users know compatibility scripts may need to be run

2009-10-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Follow-up of changeset 25876: Using tx_dbal_sqlengine instead of t3lib_sqlengine for sample handlers
	* Created icons for extension and Debug module
	* Cleanup: Applied CGL

2009-10-26  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12354: Include t3lib_sqlengine from Core to DBAL
	* Fixed bug #12349: Clean-up SQL parser and SQL engine

2009-10-20  Oliver Hader  <oliver@typo3.org>

	* Set version to 0.9.23

2009-10-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #6953: Mapping of fieldnames in SQL-functions like MIN(), MAX() or SUM() does not work (Thanks to Christian and Michael Miousse)

2009-10-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised version to 0.9.22

2009-09-29  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12071: t3lib_sqlparser is not able to parse alias of a joined table

2009-09-20  Xavier Perseguers  <typo3@perseguers.ch>
